[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/carta_mais_dois.png" type="Texture" id=1]
[ext_resource path="res://assets/fundo_provisorio2.png" type="Texture" id=2]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/personagem01.png" type="Texture" id=4]
[ext_resource path="res://assets/pronto.png" type="Texture" id=5]
[ext_resource path="res://assets/espaco_instrucoes.png" type="Texture" id=6]
[ext_resource path="res://instrucoes.gd" type="Script" id=7]
[ext_resource path="res://assets/anim_inimigo_morte.png" type="Texture" id=8]
[ext_resource path="res://assets/animacao_ataque.png" type="Texture" id=9]
[ext_resource path="res://main.gd" type="Script" id=10]
[ext_resource path="res://assets/animacao_ataque_basico_inimigo.png" type="Texture" id=11]
[ext_resource path="res://inimigo.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "ataque_carta_mais_dois",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "anim_inimigo_morte",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "anim_ataque_inimigo",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=20]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=28]
size = 32
font_data = ExtResource( 3 )

[node name="main" type="Node2D"]
script = ExtResource( 10 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="s_instrucao_um" type="Sprite" parent="fundo"]
position = Vector2( 380, -207 )
scale = Vector2( 2.38077, 2 )
texture = ExtResource( 6 )

[node name="s_instrucao_dois" type="Sprite" parent="fundo"]
position = Vector2( 380.2, -72 )
scale = Vector2( 2.38077, 2 )
texture = ExtResource( 6 )

[node name="s_instrucao_tres" type="Sprite" parent="fundo"]
position = Vector2( 380.2, 65 )
scale = Vector2( 2.38077, 2 )
texture = ExtResource( 6 )

[node name="cartas" type="Node" parent="."]

[node name="carta_mais_dois" type="Button" parent="cartas"]
margin_left = 136.0
margin_top = 384.0
margin_right = 257.0
margin_bottom = 558.0

[node name="Sprite" type="Sprite" parent="cartas/carta_mais_dois"]
position = Vector2( 61, 86 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 1 )

[node name="ataque_mais_dois" type="AnimatedSprite" parent="cartas/carta_mais_dois"]
position = Vector2( 97, -160 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "ataque_carta_mais_dois"
speed_scale = 2.0

[node name="carta_mais_dois2" type="Button" parent="cartas"]
margin_left = 328.0
margin_top = 384.0
margin_right = 449.0
margin_bottom = 558.0

[node name="Sprite" type="Sprite" parent="cartas/carta_mais_dois2"]
position = Vector2( 61, 86 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 1 )

[node name="ataque_mais_dois2" type="AnimatedSprite" parent="cartas/carta_mais_dois2"]
position = Vector2( -54, -160 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "ataque_carta_mais_dois"
speed_scale = 2.0

[node name="carta_mais_dois3" type="Button" parent="cartas"]
margin_left = 528.0
margin_top = 384.0
margin_right = 649.0
margin_bottom = 558.0

[node name="Sprite" type="Sprite" parent="cartas/carta_mais_dois3"]
position = Vector2( 61, 86 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 1 )

[node name="ataque_mais_dois3" type="AnimatedSprite" parent="cartas/carta_mais_dois3"]
position = Vector2( -212, -160 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "ataque_carta_mais_dois"
speed_scale = 2.0

[node name="instrucoes" type="Node" parent="."]
script = ExtResource( 7 )

[node name="instrucao_um" type="Label" parent="instrucoes"]
margin_left = 768.0
margin_top = 32.0
margin_right = 1015.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="instrucao_dois" type="Label" parent="instrucoes"]
anchor_left = -0.000390589
anchor_right = 0.142188
anchor_bottom = 0.106667
margin_left = 768.4
margin_top = 164.0
margin_right = 872.4
margin_bottom = 228.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="instrucao_tres" type="Label" parent="instrucoes"]
anchor_left = -0.000390589
anchor_right = 0.142188
anchor_bottom = 0.108333
margin_left = 768.4
margin_top = 301.0
margin_right = 872.4
margin_bottom = 365.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="botao_pronto" type="Button" parent="."]
margin_left = 800.0
margin_top = 472.0
margin_right = 976.0
margin_bottom = 568.0

[node name="Sprite" type="Sprite" parent="botao_pronto"]
position = Vector2( 92, 48 )
scale = Vector2( 2.07692, 2 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="botao_pronto"]
margin_left = -8.0
margin_top = 16.0
margin_right = 181.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "Pronto!"

[node name="jogador" type="Sprite" parent="."]
position = Vector2( 160, 224 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )
flip_h = true

[node name="inimigo" type="AnimatedSprite" parent="."]
position = Vector2( 608, 224 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 27 )
animation = "anim_inimigo_morte"
frame = 2
script = ExtResource( 12 )

[node name="ataque_inimigo_menos_dois" type="AnimatedSprite" parent="inimigo"]
position = Vector2( -31.6, 0 )
frames = SubResource( 19 )
animation = "anim_ataque_inimigo"

[node name="ataque_inimigo_menos_dois2" type="AnimatedSprite" parent="inimigo"]
position = Vector2( -53.6, 0 )
frames = SubResource( 19 )
animation = "anim_ataque_inimigo"

[node name="ataque_inimigo_menos_dois3" type="AnimatedSprite" parent="inimigo"]
position = Vector2( -75.6001, 0 )
frames = SubResource( 19 )
animation = "anim_ataque_inimigo"

[node name="menos_seis" type="Label" parent="inimigo"]
margin_left = -70.4
margin_top = -51.2
margin_right = -30.4
margin_bottom = -15.2
custom_fonts/font = SubResource( 20 )
text = "-6"
align = 1
valign = 1

[node name="venceu" type="Label" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 752.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 28 )
text = "Parabéns! Você conseguiu!"
align = 1
valign = 1

[connection signal="pressed" from="cartas/carta_mais_dois" to="instrucoes" method="_on_carta_mais_dois_pressed"]
[connection signal="pressed" from="cartas/carta_mais_dois2" to="instrucoes" method="_on_carta_mais_dois2_pressed"]
[connection signal="pressed" from="cartas/carta_mais_dois3" to="instrucoes" method="_on_carta_mais_dois3_pressed"]
[connection signal="pressed" from="botao_pronto" to="." method="_on_botao_pronto_pressed"]
